Update shell.md